<resources>
    <string name="app_name">ALC4.0</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="user_name">Name: Wanjiru Catherine</string>
    <string name="user_phone">Phone Number: 0701869953</string>
    <string name="user_github">Country : Kenya</string>
    <string name="user_track">Track : Android</string>
    <string name="user_email">Email  : catherinemunene802@gmail.com</string>
    <string name="user_twitter">Slack : Catherine Wanjiru</string>
    <string name="user_image">Shiru Image</string>
</resources>
